--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -102,7 +102,7 @@ body {
       align-self: center;
       color: #e07a5f;
       padding: 5rem 2rem;
-      // display: none;
+      display: none;
 
       @media (any-hover: none) {
         display: block;
